update resume css

--- a/static/css/less/resume.less
+++ b/static/css/less/resume.less
@@ -266,6 +266,10 @@ label.cv-error {
   color: @errorText;
 }
 
+.cv-left-hr {
+  border-left: 1px solid darken(@grayLighter, 10%);
+}
+
 #footer {
   margin: 0 -20px -20px -20px;
   border-top: 1px solid darken(@grayLighter, 10%);
