--- a/templates/signin.html
+++ b/templates/signin.html
@@ -2,59 +2,94 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>Please Sign In - Brighter CV</title>
+    <title>Sign In | Brighter CV</title>
     <link rel="stylesheet" href="/static/css/bootstrap.css" />
-    <script type="text/javascript" src="/static/js/jquery.min.js"></script>
-    <script type="text/javascript" src="/static/js/jquery.md5.js"></script>
-    <script type="text/javascript" src="/static/js/bootstrap.min.js"></script>
-    <script type="text/javascript">
-var redirect = '{{ redirect }}';
-
-function show_error(msg) {
-    if (msg) {
-        $('#span-signin-error').text(msg);
-        $('#div-signin-error').show();
+    <script src="/static/js/jquery.min.js"></script>
+    <script src="/static/js/jquery.md5.js"></script>
+    <script src="/static/js/bootstrap.min.js"></script>
+    <script src="/static/js/brightercv.js"></script>
+    <script>
+function ajax_signin() {
+    var passwd = $('#passwd').val();
+    if (passwd.length < 6) {
+        $.showError('Password must be at least 6 characters.');
+        return false;
     }
-}
-
-function ajax_signin(form) {
-    $('#md5-passwd').val($.md5($('#origin-passwd').val()));
-    return true;
+    $.showError('');
+    $('button[type=submit]').attr('disabled', 'disabled');
+    $.postJSON('/auth/signin', {
+        'email': $('#email').val(),
+        'passwd': $.md5(passwd),
+        'remember': $('#remember:checked').length > 0
+    }, function(r) {
+        location.assign(r.redirect);
+    }, function(err) {
+        $.showError(err.message);
+    }, function() {
+        $('button[type=submit]').removeAttr('disabled');
+    });
+    return false;
 }
     </script>
 </head>
-<body>
+<body data-spy="scroll" data-target=".affix">
     <div class="container">
         <div class="row">
-            <div class="offset1 span10">
+            <div class="span2">
+                <div id="cv-affix" class="affix">
+                    <ul id="cv-affix-list" class="nav nav-list">
+                        <li class="nav-header">Brighter CV</li>
+                        <li><a href="/">Home <i class="icon-home"></i></a></li>
+                        <li class="active"><a href="javascript:void(0)">Sign In <i class="icon-lock"></i></a></li>
+                        <li><a href="/auth/register">Register <i class="icon-user"></i></a></li>
+                        <li class="divider"></li>
+                        <li><a href="/help">Help <i class="icon-question-sign"></i></a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="span10">
                 <div id="body">
-                    <div class="row">
-                        <div>BrighterCV.com</div>
-                    </div>
+                    <h1>Please Sign In</h1>
                     <hr />
-                    <div class="row" style="margin-top:120px; margin-bottom:120px;">
-                        <div class="offset3 span4">
-                            <form action="/auth/signin" method="post" onsubmit="return ajax_signin(this)">
-                                <div id="div-signin-error" class="alert alert-error">
-                                    <span id="span-signin-error">Error</span>
+                    <div class="row" style="margin: 50px 0">
+                        <div class="span5">
+                            <form name="signin" action="/auth/signin" class="form-horizontal" onsubmit="return ajax_signin()">
+                                <div class="alert alert-error offset1 hide"></div>
+                                <div class="control-group">
+                                    <label class="control-label">Email</label>
+                                    <div class="controls">
+                                        <input type="text" id="email" maxlength="50" placeholder="Email" />
+                                    </div>
                                 </div>
-                                <label class="control-label">Email:</label>
-                                <input type="text" id="input-email" name="email" maxlength="50" class="input-xlarge" value="{{ email }}" />
-                                <label class="control-label">Password:</label>
-                                <input type="password" id="origin-passwd" maxlength="50" class="input-xlarge" />
-                                <input type="hidden" id="md5-passwd" name="passwd" />
-                                <label class="checkbox">
-                                    <input type="checkbox" name="remember" value="True" />
-                                    Remember me
-                                </label>
-                                <button type="submit" class="btn btn-primary">Sign In</button>
+                                <div class="control-group">
+                                    <label class="control-label">Password</label>
+                                    <div class="controls">
+                                        <input type="password" id="passwd" maxlength="20" placeholder="Password" />
+                                    </div>
+                                </div>
+                                <div class="control-group">
+                                    <div class="controls">
+                                        <label class="checkbox">
+                                            <input id="remember" type="checkbox" /> Remember me
+                                        </label>
+                                    </div>
+                                </div>
+                                <div class="control-group">
+                                    <div class="controls">
+                                        <button type="submit" class="btn btn-primary">Sign in</button>
+                                    </div>
+                                </div>
                             </form>
+                        </div>
+                        <div class="span4">
+                            <div class="cv-left-hr" style="margin-left:20px; padding-left:20px;">
+                                Already has LinkedIn account?
+                            </div>
                         </div>
                     </div>
                     <div id="footer">
-                        <div>Brighter CV, for brighter job, for brighter day.</div>
-                        <div>Copyright&copy; 2013, by <a href="/">Michael Liao</a>.</div>
-                        <div><a href="/">http://www.brightercv.com</a></div>
+                        <div>Permernent resume link: <a href="#">http://www.brightercv.com/michaelliao</a></div>
+                        <div>Build brighter CV for brighter job, for brighter day. <a href="/">www.brightercv.com</a></div>
                     </div>
                 </div>
             </div>
