--- a/static/css/less/resume.less
+++ b/static/css/less/resume.less
@@ -125,7 +125,7 @@ body {
   padding: @baseLineHeight;
   text-shadow: 0px 1px 0px rgba(0,0,0,0.1);
   //rgba(255, 255, 255, 0.498039) 0px 1px 0px;
-  > h1 {
+  h1 {
     margin: 10px 0 20px 0;
     font-size: @baseFontSize * 2;
     text-align: center;
