add home page, print page, update resume page

--- a/templates/register.html
+++ b/templates/register.html
@@ -40,8 +40,8 @@ function ajax_register() {
                     <ul id="cv-affix-list" class="nav nav-list">
                         <li class="nav-header">Brighter CV</li>
                         <li><a href="/">Home <i class="icon-home"></i></a></li>
-                        <li class="active"><a href="javascript:void(0)">Register <i class="icon-user"></i></a></li>
                         <li><a href="/auth/signin">Sign In <i class="icon-lock"></i></a></li>
+                        <li class="active"><a href="javascript:void(0)">Register <i class="icon-user"></i></a></li>
                         <li class="divider"></li>
                         <li><a href="/help">Help <i class="icon-question-sign"></i></a></li>
                     </ul>
@@ -82,7 +82,9 @@ function ajax_register() {
                         </div>
                         <div class="span4">
                             <div class="cv-left-hr" style="margin-left:20px; padding-left:20px;">
-                                Already has LinkedIn account?
+                                <p>Already has LinkedIn account?</p>
+                                <p>We can import your LinkedIn profile and build brighter CV for you in 10 seconds!</p>
+                                <p>Coming soon...</p>
                             </div>
                         </div>
                     </div>
