--- a/templates/signin.html
+++ b/templates/signin.html
@@ -83,13 +83,15 @@ function ajax_signin() {
                         </div>
                         <div class="span4">
                             <div class="cv-left-hr" style="margin-left:20px; padding-left:20px;">
-                                Already has LinkedIn account?
+                                <p>Already has LinkedIn account?</p>
+                                <p>We can import your LinkedIn profile and build brighter CV for you in 10 seconds!</p>
+                                <p>Coming soon...</p>
                             </div>
                         </div>
                     </div>
                     <div id="footer">
-                        <div>Permernent resume link: <a href="#">http://www.brightercv.com/michaelliao</a></div>
                         <div>Build brighter CV for brighter job, for brighter day. <a href="/">www.brightercv.com</a></div>
+                        <div>Find author on LinkedIn: <a target="_blank" href="http://www.linkedin.com/in/liaoxuefeng">http://www.linkedin.com/in/liaoxuefeng</a>
                     </div>
                 </div>
             </div>
